<resources>
    <string name="app_name">QrMyShip</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="equipment_list">Equipment List</string>
    <string name="add_equipment">Add Equipment</string>
    <string name="equipment_number">Equip. Number:</string>
    <string name="manufacturer">Manufacturer:</string>
    <string name="model">Model:</string>
    <string name="serial_number">Serial Number:</string>
    <string name="install_date">Install Date:</string>
    <string name="order_number">Order Number:</string>
    <string name="link_to_manual">Link to Manual:</string>
    <string name="hours">Hours:</string>
    <string name="qrcode">QrCode:</string>
    <string name="comments">Comments:</string>
    <string name="save_changes">Save Changes</string>
    <string name="remove_equipment">Remove Equipment</string>
    <string name="delete_equipment">Delete Equipment</string>
    <string name="sub_category">Sub Category</string>
    <string name="equipment_name">Equipment Name</string>
    <string name="category1">Category1</string>
    <string name="category2">Category2</string>
    <string name="category3">Category3</string>
    <string name="observations">Observations</string>
    <string name="PartNumber">PartNumber</string>
    <string name="observations1">Observations1</string>
    <string name="observations3">Observations2</string>
    <string name="observations4">Observations3</string>
    <string name="observations5">Observations4</string>
    <string name="generate_new_qr_code_to_this_equipment">Generate new QR Code To This Equipment</string>
    <string name="equipment">Equipment:</string>
    <string name="equip_name">All Equipments</string>
    <string name="category">Category</string>
    <string name="categories">Categories:</string>
    <string name="main_engine">Main Engine</string>
    <string name="title_activity_search_fragment">SearchFragment</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="generate_new_qr_code">Generate New Qr Code</string>
</resources>