<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presenter.fragment.EditEquipmentFragment"
    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="70dp"
        android:fillViewport="true">

        <TextView
            android:id="@+id/equip_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:padding="8dp"
            android:text="@string/equipment_number"
            style="@style/NormalText"/>

        <EditText
            android:id="@+id/edit_equip_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/equip_name"
            android:layout_centerHorizontal="true"
            android:ems="10"
            android:inputType="textPersonName"
            style="@style/NormalText"/>

        <TextView
            android:id="@+id/manufacturer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/edit_equip_name"
            android:layout_centerHorizontal="true"
            android:padding="8dp"
            android:text="@string/manufacturer"
            style="@style/NormalText"/>

        <EditText
            android:id="@+id/edit_manufacturer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/manufacturer"
            android:layout_centerHorizontal="true"
            android:ems="10"
            android:inputType="textPersonName"
            style="@style/NormalText"/>

        <TextView
            android:id="@+id/model"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/edit_manufacturer"
            android:layout_centerHorizontal="true"
            android:padding="8dp"
            android:text="@string/model"
            style="@style/NormalText"/>

        <EditText
            android:id="@+id/edit_model"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/model"
            android:layout_centerHorizontal="true"
            android:ems="10"
            android:inputType="textPersonName"
            style="@style/NormalText"/>

        <TextView
            android:id="@+id/serial_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/edit_model"
            android:layout_centerHorizontal="true"
            android:padding="8dp"
            android:text="@string/serial_number"
            style="@style/NormalText"/>

        <EditText
            android:id="@+id/edit_serial_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/serial_number"
            android:layout_centerHorizontal="true"
            android:ems="10"
            android:inputType="textPersonName"
            style="@style/NormalText"/>

        <TextView
            android:id="@+id/install_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/edit_serial_number"
            android:layout_centerHorizontal="true"
            android:padding="8dp"
            android:text="@string/install_date"
            style="@style/NormalText"/>

        <EditText
            android:id="@+id/edit_install_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/install_date"
            android:layout_centerHorizontal="true"
            android:ems="10"
            android:inputType="textPersonName"
            style="@style/NormalText"/>

        <TextView
            android:id="@+id/fluig"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/edit_install_date"
            android:layout_centerHorizontal="true"
            android:text="@string/fluig"
            style="@style/NormalText"/>

        <EditText
            android:id="@+id/edit_fluig"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/fluig"
            android:layout_centerHorizontal="true"
            android:ems="10"
            android:inputType="textPersonName"
            style="@style/NormalText"/>

        <TextView
            android:id="@+id/manuallink"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/edit_fluig"
            android:layout_centerHorizontal="true"
            android:padding="8dp"
            android:text="@string/link_to_manual"
            style="@style/NormalText"/>

        <EditText
            android:id="@+id/edit_manuallink"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/manuallink"
            android:layout_centerHorizontal="true"
            android:ems="10"
            android:inputType="textPersonName"
            style="@style/NormalText"/>

        <TextView
            android:id="@+id/hours"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/edit_manuallink"
            android:layout_centerHorizontal="true"
            android:padding="8dp"
            android:text="@string/hours"
            style="@style/NormalText"/>

        <EditText
            android:id="@+id/edit_hours"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/hours"
            android:layout_centerHorizontal="true"
            android:ems="10"
            android:inputType="textPersonName"
            style="@style/NormalText"/>

        <TextView
            android:id="@+id/qr_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/edit_hours"
            android:layout_centerHorizontal="true"
            android:padding="8dp"
            android:text="@string/qrcode"
            style="@style/NormalText"/>

        <EditText
            android:id="@+id/edit_qr_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/qr_code"
            android:layout_centerHorizontal="true"
            android:ems="10"
            android:inputType="textPersonName"
            style="@style/NormalText"/>

        <TextView
            android:id="@+id/comments"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/edit_qr_code"
            android:layout_centerHorizontal="true"
            android:padding="8dp"
            android:text="@string/comments"
            style="@style/NormalText"/>

        <EditText
            android:id="@+id/edit_comments"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/comments"
            android:layout_centerHorizontal="true"
            android:ems="10"
            android:inputType="textPersonName"
            style="@style/NormalText"/>

        <Button
            android:id="@+id/addequipment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/edit_comments"
            android:layout_centerHorizontal="true"
            android:text="@string/add_equipment"
            style="@style/Button"/>
        <Button
            android:id="@+id/remove_equipment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/addequipment"
            android:layout_centerHorizontal="true"
            android:text="@string/remove_equipment"
            style="@style/Button"/>
    </RelativeLayout>
</ScrollView>